OV5640_SDCard/OV5640_display.sdk/.metadata/.plugins/org.eclipse.cdt.ui/OV5640_SDcard.build.log
16:35:39 **** Auto Build of configuration Debug for project OV5640_SDcard ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../OV5640_SDcard_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
In file included from ../src/main.c:20:0:
../../OV5640_SDcard_bsp/ps7_cortexa9_0/include/xtime_l.h:87:9: note: #pragma message: For the sleep routines, Global timer is being used
 #pragma message ("For the sleep routines, Global timer is being used")
         ^~~~~~~
../src/main.c: In function 'main':
../src/main.c:27:20: error: 'XPAR_FABRIC_AXI_VDMA_0_S2MM_INTROUT_INTR' undeclared (first use in this function); did you mean 'XPAR_FABRIC_AXI_VDMA_0_MM2S_INTROUT_INTR'?
 #define S2MM_INTID XPAR_FABRIC_AXI_VDMA_0_S2MM_INTROUT_INTR
                    ^
../src/main.c:27:20: note: in definition of macro 'S2MM_INTID'
 #define S2MM_INTID XPAR_FABRIC_AXI_VDMA_0_S2MM_INTROUT_INTR
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:27:20: note: each undeclared identifier is reported only once for each function it appears in
 #define S2MM_INTID XPAR_FABRIC_AXI_VDMA_0_S2MM_INTROUT_INTR
                    ^
../src/main.c:27:20: note: in definition of macro 'S2MM_INTID'
 #define S2MM_INTID XPAR_FABRIC_AXI_VDMA_0_S2MM_INTROUT_INTR
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:65:19: warning: unused variable 'vdmaConfig' [-Wunused-variable]
  XAxiVdma_Config *vdmaConfig;
                   ^~~~~~~~~~
At top level:
../src/main.c:224:13: warning: 'ReadCallBack' defined but not used [-Wunused-function]
 static void ReadCallBack(void *CallbackRef, u32 Mask)
             ^~~~~~~~~~~~
make: *** [src/subdir.mk:47: src/main.o] Error 1

16:35:42 Build Finished (took 2s.445ms)

